# MyProject

./: choose_student.py  download_music.py  单词听写.py
MrBoy/: .env.prod  README.md  bot.py  pyproject.toml  test.py
MrBoy/b1ank/plugins/Deepseek/: __init__.py
MrBoy/b1ank/plugins/GetMcUser/: __init__.py
MrBoy/b1ank/plugins/HistoryToday/: __init__.py
MrBoy/b1ank/plugins/News/: __init__.py
MrBoy/b1ank/plugins/QueryMcServer/: __init__.py
MrBoy/b1ank/plugins/weather/: __init__.py
c++/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
muma/: screen.py  server.py  windowshow.py
muma/templates/: index.html
